[project]
name = "mp4viewer"
version = "0.1.2"
authors = [
  { name="Amarghosh Vadakkoot", email="myfirstname@gmail.com" },
]
description = "Parse mp4 files and inspect their metadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/amarghosh/mp4viewer"
Issues = "https://github.com/amarghosh/mp4viewer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
